--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,14 +20,17 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#"><i class="fa fa-plus" aria-hidden="true"></i> New</a>
-      </li>
+        <a class="nav-link text-success" href="#" data-toggle="modal" data-target="#addItemModal"><i class="fa fa-plus" aria-hidden="true"></i> New</a>
+      </li> 
     </ul>
     <ul class="nav navbar-nav">
              <% if user_signed_in? %>
+            
               <li class="nav-item">
-                  <%= link_to current_user, class: "navbar-link" do %>
-                    <strong><span class="glyphicon glyphicon-user"></span>&nbsp;<%= current_user.email %></strong>
+                  <%= link_to  edit_user_registration_path, class: "navbar-link" do %>
+                     <div  class="pull-right user-info">
+                       <%= image_tag current_user.avatar_url(48), class: "gravatar" %>
+                     </div>
                   <% end %>
               </li>
               <li class="nav-item dropdown">
@@ -35,7 +38,7 @@
                         <i class="fa fa-bars" aria-hidden="true"></i>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                    <%= link_to 'My Profile', current_user, :class => 'dropdown-item' %>
+                    <a class="dropdown-item" href="#" data-toggle="modal" data-target="#addItemModal"><i class="fa fa-plus" aria-hidden="true"></i> New ToDo</a>
                     <%= link_to 'Edit profile', edit_user_registration_path, :class => 'dropdown-item' %>
                     <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'dropdown-item'  %>
                 </div>
@@ -59,8 +62,6 @@
   <% end %>
 
   <%= yield %>
-
-
 
 </body>
 </html>
