added heroku scheduler in place of whenever gem for production, changed name to TaskBloc, added favicon

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bloccitoff</title>
+  <title>TaskBloc</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -14,8 +14,8 @@
     <span class="navbar-toggler-icon"></span>
   </button>
    <%= link_to root_path, :class => "navbar-brand strong" do %>
-     <%= content_tag('icon', '', class: 'fa fa-black-tie')  %>
-            Blocitoff
+     <%= content_tag('icon', '', class: 'fa fa-tasks')  %>
+            TaskBloc
    <% end %>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
