--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -1,6 +1,8 @@
 
 .itemCard {
     padding: 5px 10px;
+    margin-bottom: 5px;
+    background-color:#efefef !important;
 }
 
 .itemCard .card-block {
