--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -9,6 +9,16 @@
             <%= devise_error_messages! %>
 
             <div class="field form-group">
+              <%= f.label :username %><br />
+              <%= f.text_field :username, autofocus: true, class: "form-control" %>
+            </div>
+            
+            <div class="field form-group">
+              <%= f.label :name %><br />
+              <%= f.text_field :name, autofocus: true, class: "form-control" %>
+            </div>
+            
+            <div class="field form-group">
               <%= f.label :email %><br />
               <%= f.email_field :email, autofocus: true, class: "form-control" %>
             </div>
