--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -46,6 +46,7 @@
 
 html, body {
   font-family: 'Lato', sans-serif;
+  background: #ededed;
 }
 .navbar {
   background-color: #ddd;
@@ -126,6 +127,9 @@ background-color: $gray;
   border-color: #eed3d7;
   color: #b94a48;
 }
+
+ 
+
 
 // Back to top button styles
 #top-link-block.affix-top {
