--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <span class="navbar-toggler-icon"></span>
   </button>
    <%= link_to root_path, :class => "navbar-brand strong" do %>
-     <%= content_tag('icon', '', class: 'fa fa-tasks')  %>
+     <%= content_tag('icon', '', class: 'fa fa-tasks text-primary')  %>
             TaskBloc
    <% end %>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -25,7 +25,7 @@
     </ul>
     <ul class="nav navbar-nav">
              <% if user_signed_in? %>
-            
+             
               <li class="nav-item">
                   <%= link_to  edit_user_registration_path, class: "navbar-link" do %>
                      <div  class="pull-right user-info">
@@ -61,7 +61,9 @@
    </div>
   <% end %>
 
-  <%= yield %>
+  <div class="viewBox">
+      <%= yield %>
+  </div>
 
 </body>
 </html>
