--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -1,54 +1,77 @@
-
-<div class="container">
+<div class="container-fluid dashboard">
   <div class="row mb-5">
-    <div class="col">
-      <h3 class="text-primary">What's on the list:</h3>
-      <% if current_user.items_expiring_today.count == 0 %>
-        <h4 class="text-success">Items set to expire today: <%= current_user.items_expiring_today.count %></h4>
-      <% else %>
-        <h4 class="text-danger">Items set to expire today: <%= current_user.items_expiring_today.count %></h4>
-      <% end %>
-    </div>
-    <div class="col">
-      
-    </div>
-  </div>
-  <div class="row">
-    <div class="col">
-      <h3 class="mb-3">Today <span class="dateTitle"><%= Time.now.strftime("%a %x") %></span></h3>
-      <div class="card addToDo" data-toggle="modal" data-target="#addItemModal">
-      <div class="card-block text-center">
-        <i class="fa fa-plus" aria-hidden="true"></i>
+    <div class="col-lg-12 wrapper">
+      <%= render partial: "sidebar" %>
+    <div class="col-sm-9 offset-lg-2 col-md-10 offset-md-1 main-content">
+      <div class="row mainRow">
+        <div class="col-sm-12">
+          <div class="row">
+            <div class="col-lg-6 col-sm-12">
+              <h3 class="text-primary">What's on the list:</h3>
+              <% if current_user.items_expiring_today.count == 0 %>
+                <h4 class="text-success">Items set to expire today: <%= current_user.items_expiring_today.count %></h4>
+              <% else %>
+                <h4 class="text-danger">Items set to expire today: <%= current_user.items_expiring_today.count %></h4>
+              <% end %>
+            </div>
+            
+            <div class="col-lg-4 col-sm-12">
+              <div class="card addToDo" data-toggle="modal" data-target="#addItemModal">
+                <div class="card-block text-center">
+                  <i class="fa fa-plus" aria-hidden="true"></i>
+                </div>
+                <div class="line"></div>
+              </div>
+            </div>
+          </div>
+          
+          <div class="row itemsRow">
+            <div class="col-lg-4 col-md-4 col-sm-12 todayBox">
+              <div class="box">
+                <h3 class="mb-3">Today <span class="dateTitle"><%= Time.now.strftime("%a %x") %></span></h3>
+                <% current_user.items_expiring_today.each do |item| %>
+                  <%= render partial: "items/item", locals: { item: item } %>
+                <% end %>
+              </div> 
+            </div>
+            
+            <div class="col-lg-4 col-md-4 col-sm-12 tomorrowBox">
+              <div class="box">
+                <h3 class="mb-3">Tomorrow <span class="dateTitle"><%= Date.tomorrow.strftime("%a %x") %></span></h3>
+                <% current_user.items_expiring_tomorrow.each do |item| %>
+                  <%= render partial: "items/item", locals: { item: item } %>
+                <% end %>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-4 col-sm-12 upcomingBox">
+              <div class="box">
+                <h3 class="mb-3">Upcoming </h3>
+                <% current_user.items_upcoming.each do |item| %>
+                  <%= render partial: "items/item", locals: { item: item } %>
+                <% end %>
+              </div>
+            </div>
+          </div><%# row %>
+          
+        </div>  
+      </div>    
+    </div><%# main-content %>
+    </div><%# wrapper %>
+  </div> <%# row %>
+</div> <%# containter-fluid%>
+  
+<div class="modal fade" id="addItemModal" tabindex="-1" role="dialog" aria-labelledby="addItemModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-body">
+        <%= render partial: 'items/form' %>
       </div>
-      <div class="line"></div>
-    </div>
-      <% current_user.items_expiring_today.each do |item| %>
-        <%= render partial: "items/item", locals: { item: item } %>
-      <% end %>
-    </div> 
-    <div class="col">
-      <h3 class="mb-3">Tomorrow <span class="dateTitle"><%= Date.tomorrow.strftime("%a %x") %></span></h3>
-         <div class="card addToDo" data-toggle="modal" data-target="#addItemModal">
-      <div class="card-block text-center">
-        <i class="fa fa-plus" aria-hidden="true"></i>
+      <div class="modal-footer clearfix">
+        <div class="clearfix" style="float:left;">
+          <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+        </div>
       </div>
-      <div class="line"></div>
-    </div>
-      <% current_user.items_expiring_tomorrow.each do |item| %>
-        <%= render partial: "items/item", locals: { item: item } %>
-      <% end %>
-    </div>
-    <div class="col">
-      <h3 class="mb-3">Upcoming </h3>
-         <div class="card addToDo" data-toggle="modal" data-target="#addItemModal">
-      <div class="card-block text-center">
-        <i class="fa fa-plus" aria-hidden="true"></i>
-      </div>
-      <div class="line"></div>
-    </div>
-      <% current_user.items_upcoming.each do |item| %>
-        <%= render partial: "items/item", locals: { item: item } %>
-      <% end %>
     </div>
   </div>
 </div>
@@ -57,7 +80,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-body">
-        <%= render partial: 'items/form' %>
+        <%#= render partial: 'items/edit_form' %>
       </div>
       <div class="modal-footer clearfix">
         <div class="clearfix" style="float:left;">
