--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -3,6 +3,7 @@
     padding: 5px 10px;
     margin-bottom: 5px;
     background-color:#efefef !important;
+    border-radius:0 !important;
 }
 
 .itemCard .card-block {
@@ -10,6 +11,7 @@
 }
 .itemCard .card-block .card-title {
     font-size: 1.2em;
+    text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.4);
 }
 
 .itemCard .card-block .card-subtitle {
