--- a/app/views/users/_sidebar.html.erb
+++ b/app/views/users/_sidebar.html.erb
@@ -1,33 +1,27 @@
-<div class="col-sm-3 col-md-2  sidebar hidden-sm-down">
-    <div class="sidebar-heading clearfix inset-bottom">
+<div class="col-sm-2 col-md-1  sidebar hidden-sm-down">
+    <div class="sidebar-heading clearfix">
         <div class="profile-image">
-            <%= image_tag current_user.avatar_url(48), class: "gravatar" %>
-        </div>
-        <div class="profile-info">
-            <p> Welcome,<br> <%= current_user.name.titleize %>
-            </p>
+            <%= image_tag current_user.avatar_url(180), class: "gravatar" %>
         </div>
     </div>
     <div class="sidebar-nav">
-        <h3>General</h3>
         <div class="list-group top-links">
             <%= link_to root_path, :class => 'list-group-item' do %>
-                <i class="fa fa-tachometer fa-fw" aria-hidden="true"></i>&nbsp;My Dashboard
+                <i class="fa fa-home" aria-hidden="true"></i><br><span> Home</span>
             <% end %>
-            <a href="#" class="list-group-item" data-toggle="modal" data-target="#addItemModal"><i class="fa fa-plus fa-fw" aria-hidden="true"></i>&nbsp; Add ToDo</a>
+            <a href="#" class="list-group-item" data-toggle="modal" data-target="#addItemModal"><i class="fa fa-plus" aria-hidden="true"></i><br><span> Add Task</span></a>
         </div>
         <div class="divider"></div>
         <div class="lower-links">
-            <h3>Settings</h3>
             <div class="list-group">
                <%= link_to edit_user_registration_path, :class => 'list-group-item' do %>
-                  <i class="fa fa-user fa-fw" aria-hidden="true"></i>&nbsp;My Account
+                  <i class="fa fa-user fa-fw" aria-hidden="true"></i><br><span> Account</span>
                <% end %>
                <%= link_to root_path, :class => 'list-group-item' do %>
-                  <i class="fa fa-question-circle fa-fw" aria-hidden="true"></i>&nbsp;Help
+                  <i class="fa fa-life-ring fa-fw" aria-hidden="true"></i><span> Help</span>
                <% end %>
                <%= link_to destroy_user_session_path, method: :delete, :class => 'list-group-item' do %>
-                  <i class="fa fa-sign-out fa-fw" aria-hidden="true"></i>&nbsp;Logout
+                  <i class="fa fa-sign-out fa-fw" aria-hidden="true"></i><span> Sign Out</span>
                <% end %>
             </div>
         </div>
